# cookbook-anything

./: .gitignore  CLAUDE.md  DESIGN.md  MEMORY.md  README.md  WORKFLOW.md
authoring/: .gitignore  CLAUDE.md  DESIGN.md  README.md  SKILL.md  build_profile.py  fetch_images.py  fetch_site.py  make_post.py  numbercheck.py  render.py  scaffold.py  screenshot.py  style.py
authoring/figures/: __init__.py  data.py  diagrams.py  math.py
authoring/profiles/: _SCHEMA.toml  chinchilla.toml  clean.toml  (+5 more)
core/: Cargo.toml
core/ca-cli/: Cargo.toml
core/ca-cli/src/: admit.rs  main.rs  plan.rs  verify.rs  write.rs
core/ca-extract/: Cargo.toml
core/ca-extract/src/: data.rs  intake.rs  lib.rs  markdown.rs  nativecode.rs  pdf.rs  python.rs  secrets.rs
core/ca-grade/: Cargo.toml
core/ca-grade/src/: lib.rs
core/ca-merge/: Cargo.toml
core/ca-merge/src/: lib.rs
core/ca-model/: Cargo.toml
core/ca-model/src/: lib.rs
core/ca-topology/: Cargo.toml
core/ca-topology/src/: lib.rs
docs/: self-paper.md
figlib/: constants.py  figcheck.py  figures_from_plan.py  introspect.py  lint_prose.py  payload.py  render.py  screenshot_frame.py  style.py  teaching_check.py
quality_reports/: assessment_latest.md
runner/: package.json  stages.ts  testserver.mjs
scripts/: assess.py  compile_model.py  extract_code.py  extract_data.py  extract_doc.py  intake.py  merge.py  model_schema.py
tests/: ca.py  test_m0_intake.py  test_m1_compile.py  test_m25_acquire.py  test_m2_figures.py  test_m3_write.py  test_m4_ship.py  test_m5_incremental.py  test_m6_swarm.py  test_m7_teaching.py
(+28 files in other folders)
