[workspace]
resolver = "2"
members = ["ca-model", "ca-extract", "ca-merge", "ca-topology", "ca-grade", "ca-cli"]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
sha2 = "0.10"
flate2 = "1"
