[package]
name = "ca-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ca"
path = "src/main.rs"

[dependencies]
ca-model = { path = "../ca-model" }
ca-extract = { path = "../ca-extract" }
ca-merge = { path = "../ca-merge" }
ca-topology = { path = "../ca-topology" }
ca-grade = { path = "../ca-grade" }
serde_json = { workspace = true }
